# cmake-cpp-test-coverage-template

./: .devcontainer.json  .gitignore  CMakeLists.txt  Dockerfile  README.md
applications/custom_app/: CMakeLists.txt
applications/custom_app/inc/: AwesomeClass.hpp
applications/custom_app/src/: AwesomeClass.cpp  custom_app_main.cpp
lib/processing/: CMakeLists.txt
lib/processing/inc/: MathProcessor.hpp
lib/processing/src/: MathProcessor.cpp
lib/streaming/: CMakeLists.txt
lib/streaming/inc/: MessageStreaming.hpp
lib/streaming/src/: MessageStreaming.cpp
tests/: CMakeLists.txt  MathProcessor.t.cpp  MessageStreaming.t.cpp
